# weston

./: .gitignore  meson.build  study.txt
clients/: desktop-shell.c  editor.c  window.c
compositor/: main.c  text-backend.c
desktop-shell/: input-panel.c  shell.c
keynes/: config.h  icewmbg.cc  meson.build  yapp.cc
libweston-desktop/: xdg-shell.c
